--- a/BBCode.Net.Tests/BBCode.Net.Tests.csproj
+++ b/BBCode.Net.Tests/BBCode.Net.Tests.csproj
@@ -47,6 +47,12 @@
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\BBCode.Net\BBCode.Net.csproj">
+      <Project>{0F4ECA2D-2505-4B85-8012-DED3234818AC}</Project>
+      <Name>BBCode.Net</Name>
+    </ProjectReference>
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
