Moved all classes into individual files.
git-svn-id: http://otac0n.com:3000/projects/BBCode.Net/trunk@1421 14c0b8bc-c9cf-8f41-ba33-e04da095c157

--- a/BBCode.Net/BBCode.Net.csproj
+++ b/BBCode.Net/BBCode.Net.csproj
@@ -49,7 +49,10 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="BBCode.cs" />
+    <Compile Include="BBCodeInterpreter.cs" />
+    <Compile Include="BBCodeTagTypes.cs" />
+    <Compile Include="BBCodeTag.cs" />
+    <Compile Include="BBCodeTagContext.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
